--- a/1/EomTool/EomTool.Domain/EomTool.Domain.csproj
+++ b/1/EomTool/EomTool.Domain/EomTool.Domain.csproj
@@ -34,8 +34,13 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\..\Solution\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\..\Solution\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\..\Solution\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Ninject, Version=3.0.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -44,7 +49,6 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
@@ -70,21 +74,88 @@
     <Compile Include="Concrete\SecurityRepository.cs" />
     <Compile Include="DTOs\CampAffId.cs" />
     <Compile Include="DTOs\CampaignAmount.cs" />
-    <Compile Include="Entities\Advertiser.cs" />
-    <Compile Include="Entities\Affiliate.cs" />
-    <Compile Include="Entities\BatchUpdate.cs" />
-    <Compile Include="Entities\Campaign.cs" />
-    <Compile Include="Entities\CampaignStatus.cs" />
+    <Compile Include="Entities\AccountManagerTeam.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\AdManager.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\Advertiser.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\Affiliate.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\AffiliatePaymentMethod.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\Batch.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\BatchUpdate.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\Campaign.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\CampaignNote.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\CampaignsPublisherReportDetail.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\CampaignsPublisherReportSummary.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\CampaignStatus.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\Currency.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\DADatabase.cs">
+      <DependentUpon>DAMain1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\DAMain1.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DAMain1.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\DAMain1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DAMain1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Entities\DAMain1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>DAMain1.edmx</DependentUpon>
     </Compile>
     <Compile Include="Entities\EomEntities.cs" />
+    <Compile Include="Entities\EomModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EomModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\EomModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Entities\EomModel.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>EomModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\EomToolSecurity.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EomToolSecurity.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\EomToolSecurity.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EomToolSecurity.tt</DependentUpon>
     </Compile>
     <Compile Include="Entities\EomToolSecurity.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -92,24 +163,100 @@
       <DependentUpon>EomToolSecurity.edmx</DependentUpon>
     </Compile>
     <Compile Include="Abstract\IEomEntitiesConfig.cs" />
-    <Compile Include="Entities\Invoice.cs" />
-    <Compile Include="Entities\InvoiceItem.cs" />
-    <Compile Include="Entities\InvoiceNote.cs" />
-    <Compile Include="Entities\InvoiceStatus.cs" />
-    <Compile Include="Entities\Item.cs" />
-    <Compile Include="Entities\ItemAccountingStatus.cs" />
-    <Compile Include="Entities\MarginApproval.cs" />
-    <Compile Include="Entities\MediaBuyerApprovalStatus.cs" />
-    <Compile Include="Entities\PaymentBatch.cs" />
-    <Compile Include="Entities\PaymentBatchState.cs" />
-    <Compile Include="Entities\PublisherPayment.cs" />
+    <Compile Include="Entities\Group.cs">
+      <DependentUpon>EomToolSecurity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\Invoice.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\InvoiceItem.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\InvoiceNote.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\InvoicePartial.cs" />
+    <Compile Include="Entities\InvoiceStatus.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\Item.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\ItemAccountingStatus.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\ItemPartial.cs" />
+    <Compile Include="Entities\MarginApproval.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\MediaBuyer.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\MediaBuyerApprovalStatus.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\NetTermType.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\PaymentBatch.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\PaymentBatchState.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\Permission.cs">
+      <DependentUpon>EomToolSecurity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\PubAttachment.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\PublisherNote.cs">
+      <DependentUpon>DAMain1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\PublisherPayment.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\PublisherPayout.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\PublisherRelatedItemCount.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\PublisherReport.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\PublisherReportDetail.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\PublisherReportSummary.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Entities\PublisherSummary.cs" />
-    <Compile Include="Entities\UnitType.cs" />
+    <Compile Include="Entities\PubNote.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\Role.cs">
+      <DependentUpon>EomToolSecurity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\Setting.cs">
+      <DependentUpon>DAMain1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\Source.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\TrackingSystem.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\UnitType.cs">
+      <DependentUpon>EomModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Entities\Util.cs" />
     <Compile Include="GlobalSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="Entities\EomModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
@@ -128,6 +275,36 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>DAMain1.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <None Include="Entities\DAMain1.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>DAMain1.Context.cs</LastGenOutput>
+      <DependentUpon>DAMain1.edmx</DependentUpon>
+    </None>
+    <None Include="Entities\DAMain1.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>DAMain1.cs</LastGenOutput>
+      <DependentUpon>DAMain1.edmx</DependentUpon>
+    </None>
+    <None Include="Entities\EomModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>EomModel.Context.cs</LastGenOutput>
+      <DependentUpon>EomModel.edmx</DependentUpon>
+    </None>
+    <None Include="Entities\EomModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>EomModel.cs</LastGenOutput>
+      <DependentUpon>EomModel.edmx</DependentUpon>
+    </None>
+    <None Include="Entities\EomToolSecurity.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>EomToolSecurity.Context.cs</LastGenOutput>
+      <DependentUpon>EomToolSecurity.edmx</DependentUpon>
+    </None>
+    <None Include="Entities\EomToolSecurity.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>EomToolSecurity.cs</LastGenOutput>
+      <DependentUpon>EomToolSecurity.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
